pods/cm-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: cm-pod
  name: cm-pod
spec:
  containers:
  - image: httpd
    name: cm-pod
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
