pods/mysql.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2020-08-09T19:08:01Z"
  labels:
    run: mysql
  name: mysql
  namespace: default
  resourceVersion: "843395"
  selfLink: /api/v1/namespaces/default/pods/mysql
  uid: a972355f-5141-4e77-a8b7-2197dd3bddf4
spec:
  containers:
  - image: mysql
    imagePullPolicy: Always
    name: mysql
    ports:
    - containerPort: 3306
      protocol: TCP
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: default-token-dg8bd
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  priority: 0
  restartPolicy: Never
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: default-token-dg8bd
    secret:
      defaultMode: 420
      secretName: default-token-dg8bd
status:
  phase: Pending
  qosClass: BestEffort
